--- a/package.json
+++ b/package.json
@@ -8,63 +8,63 @@
   },
   "dependencies": {
     "@emotion/core": "^11.0.0",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
-    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
-    "dotenv": "^8.2.0",
-    "gatsby": "^2.25.0",
-    "gatsby-image": "^2.4.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.4.2",
+    "dotenv": "^8.6.0",
+    "gatsby": "^3.0.0",
+    "gatsby-image": "^2.11.0",
     "gatsby-plugin-emotion": "^6.14.0",
-    "gatsby-plugin-feed": "^2.5.5",
+    "gatsby-plugin-feed": "^2.13.1",
     "gatsby-plugin-google-analytics": "^2.3.1",
     "gatsby-plugin-google-tagmanager": "^2.9.0",
     "gatsby-plugin-html-attributes": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.4.3",
-    "gatsby-plugin-offline": "^3.2.2",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-olark": "^1.0.0",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sass": "^2.3.1",
-    "gatsby-plugin-sharp": "^2.6.3",
-    "gatsby-plugin-sitemap": "^2.4.5",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sass": "^3.2.0",
+    "gatsby-plugin-sharp": "^2.14.4",
+    "gatsby-plugin-sitemap": "^2.12.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-typography": "^2.5.1",
+    "gatsby-plugin-typography": "^2.12.0",
     "gatsby-remark-autolink-headers": "^4.11.0",
-    "gatsby-remark-copy-linked-files": "^2.3.2",
+    "gatsby-remark-copy-linked-files": "^2.10.0",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.3.3",
-    "gatsby-remark-prismjs": "^3.5.1",
+    "gatsby-remark-images": "^3.11.1",
+    "gatsby-remark-prismjs": "^3.13.0",
     "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-remark-smartypants": "^2.3.1",
+    "gatsby-remark-smartypants": "^2.10.0",
     "gatsby-remark-vscode": "^2.1.1",
-    "gatsby-source-filesystem": "^2.3.3",
-    "gatsby-transformer-remark": "^2.8.8",
-    "gatsby-transformer-sharp": "^2.5.2",
-    "gatsby-transformer-yaml": "^2.4.1",
-    "hast-util-select": "^4.0.0",
-    "node-sass": "^4.14.1",
-    "prismjs": "^1.20.0",
-    "react": "^16.12.0",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-remark": "^2.16.1",
+    "gatsby-transformer-sharp": "^2.12.1",
+    "gatsby-transformer-yaml": "^2.11.0",
+    "hast-util-select": "^4.0.2",
+    "prismjs": "^1.25.0",
+    "react": "^16.14.0",
     "react-device-detect": "^1.17.0",
-    "react-dom": "^16.12.0",
-    "react-ga": "^3.0.0",
+    "react-dom": "^16.14.0",
+    "react-ga": "^3.3.0",
     "react-helmet": "^5.2.1",
     "react-script-tag": "^1.1.2",
     "react-tabs": "^3.2.3",
     "react-toastify": "^7.0.4",
-    "react-typography": "^0.16.19",
+    "react-typography": "^0.16.20",
     "rehype-parse": "^7.0.1",
     "rehype-stringify": "^8.0.0",
-    "twin.macro": "^2.6.2",
+    "sass": "^1.45.0",
+    "twin.macro": "^2.8.2",
     "typeface-barlow": "0.0.71",
-    "typography": "^0.16.19"
+    "typography": "^0.16.21"
   },
   "devDependencies": {
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
     "prettier": "2.0.5"
   },
   "homepage": "https://github.com/LoginRadius/engineering-portal#readme",
